examples/ppdatalog/negative/no_goal_rule.pl
:-type(day(@day: private int, @month: private int, @year: private int)).

:-outputs([DayOfWeek]).
?-day_of_week(DayOfWeek).
